Mantis ChangeLog

2003.??.??  -  0.18.0a5

 * Enhancement: Show file attachment indicator on bug list page (#3088).
 * Fix: Improved adherance to the XHTML standard.
 * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
 * Fix #3064: view bug buttons in vertical column
 * Fix #3072: Attached file should be opened up in a new browser window.
 * Fix #3080: project menu bar shows extra links
 * Fix #3089: Hide link to Profiles management on account page based on access level.
 * Fix #3092: Problem changing printing prefs.
 * Fix #3108: No custom fields are shown in the details, if you are in "All Projects"
 * Fix #3109: Error when adding protected users.
 * Fix #3115: manage_proj_cat_edit_page.php uses the wrong project id.
 * Languages: Updated Italian and Dutch localisations.
 * Languages: Synchronised localisation files with English localisation.

2003.03.22  -  0.18.0a4

 * Check whether other forms of compression are enabled before we turn on ob_gzhandler() in our output handler.  This should hopefully avoid problems people have had with blank pages resulting from compression problems.
 * Remove "show source" functionality which was a security hole and of little use
 * Languages: Updated Italian and Dutch localisations.
 * Languages: Added Slovak localisation.
 * Languages: Synchronised localisation files with English localisation.
 * Languages: Changed code page of Czech translation.
 * Enhancement: Added bug summary by project on summary page (#1759).
 * Enhancement: Reduced number of SQL queries on summary page (#3046).
 * Enhancement: Field names in bug history are now localized.
 * Enhancement: g_use_iis default value is now based on auto-detection of IIS servers.  Before it was defaulted to OFF.
 * Fix: 'Display selected only' on print bugs page fixed.
 * Fix: 'Hide resolved' now also works for report printing and export.
 * Fix: Do not call custom_field_set_value() in bug report and bug update if user has no write access.