@@ -7,6 +7,7 @@ Mantis ChangeLog
  * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
  * Fix #3064: view bug buttons in vertical column
  * Fix #3072: Attached file should be opened up in a new browser window.
+ * Fix #3076: Bug reports are added to the "wrong" project.
  * Fix #3080: project menu bar shows extra links
  * Fix #3089: Hide link to Profiles management on account page based on access level.
  * Fix #3092: Problem changing printing prefs.
